<?xml version="1.0" encoding="UTF-8"?>
<!--
   Copyright (C) 2016 Red Hat, Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.basepom</groupId>
    <artifactId>basepom-oss</artifactId>
    <version>25</version>
  </parent>

  <groupId>org.teiid</groupId>
  <artifactId>teiid-spring-boot-starter-parent</artifactId>
  <version>1.0.3-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>teiid-spring-boot-starter-parent</name>
  <url>http://teiid.org</url>
  <description>Teiid application framework bootstrapped with Spring Boot</description>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>jira</system>
    <url>https://issues.jboss.org/browse/TEIID</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git@github.com:teiid/teiid-spring-boot.git</connection>
    <developerConnection>scm:git:git@github.com:teiid/teiid-spring-boot.git</developerConnection>
    <url>https://github.com/teiid/teiid-spring-boot</url>
    <tag>HEAD</tag>
  </scm>
  
  <developers>
    <developer>
      <name>Steve Hawkins</name>
      <id>steve</id>
      <email>shawkins@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Project Lead</role>
      </roles>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <name>Ramesh Reddy</name>
      <id>ramesh</id>
      <email>rareddy@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Project Lead</role>
      </roles>
      <timezone>-6</timezone>
    </developer>
  </developers>

  <distributionManagement>
    <repository>
      <id>oss.sonatype.org</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>oss.sonatype.org</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <version.deploy.plugin>2.8.2</version.deploy.plugin>

    <basepom.check.skip-dependency>true</basepom.check.skip-dependency>
    <basepom.check.skip-duplicate-finder>true</basepom.check.skip-duplicate-finder>
    <basepom.check.skip-dependency-versions-check>true</basepom.check.skip-dependency-versions-check>
    <basepom.check.skip-findbugs>true</basepom.check.skip-findbugs>

    <!-- Project Dependencies -->
    <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
    <teiid.version>12.0.0</teiid.version>
    <version.xml-apis>1.4.01</version.xml-apis>
    <ObjectStoreEnvironmentBean.objectStoreDir>${build.dir}</ObjectStoreEnvironmentBean.objectStoreDir>
    <hibernate.version>5.3.7.Final</hibernate.version> <!-- Matching with OpenShift SB as it updates it -->
    <hibernate.tools.version>5.3.7.Final</hibernate.tools.version>
    <version.javax.annotation>1.3.2</version.javax.annotation>
    <version.javax.xml.bind>2.3.1</version.javax.xml.bind>
    <version.org.mockito>1.9.5</version.org.mockito>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <!-- During release:perform, enable the "release" profile -->
          <releaseProfiles>release</releaseProfiles>
          <goals>deploy</goals>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>
      </plugin>

    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-jdbc</artifactId>
        <version>${spring-boot.version}</version>
      </dependency>
      <dependency>
        <groupId>org.teiid</groupId>
        <artifactId>teiid-parent</artifactId>
        <version>${teiid.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.teiid</groupId>
        <artifactId>teiid-olingo</artifactId>
        <version>${teiid.version}</version>
      </dependency>
      <dependency>
        <groupId>org.teiid.connectors</groupId>
        <artifactId>translator-excel</artifactId>
        <version>${teiid.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${hibernate.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-tools</artifactId>
        <version>${hibernate.tools.version}</version>
      </dependency>
      <dependency>
        <groupId>xml-apis</groupId>
        <artifactId>xml-apis</artifactId>
        <version>${version.xml-apis}</version>
      </dependency>
      <dependency>
        <groupId>javax.annotation</groupId>
        <artifactId>javax.annotation-api</artifactId>
        <version>${version.javax.annotation}</version>
      </dependency>
      <dependency>
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
          <version>${version.javax.xml.bind}</version>
      </dependency>      
      <!--Project dependencies -->
      <dependency>
        <groupId>org.teiid</groupId>
        <artifactId>teiid-spring-boot-starter</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>${version.org.mockito}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>snapshots-repo</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>starter</module>
        <module>starter-test</module>
        <module>data/rest</module>
        <module>data/excel</module>
        <module>odata</module>
        <module>samples</module>
      </modules>
    </profile>
    <profile>
      <id>release</id>
      <properties>
         <basepom.check.skip-javadoc>false</basepom.check.skip-javadoc>      
      </properties>
      <modules>
        <module>starter</module>
        <module>data/rest</module>
        <module>data/excel</module>
        <module>odata</module>
      </modules>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <configuration>
              <maxmemory>512m</maxmemory>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-sources</id>
                <phase>verify</phase>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-release-plugin</artifactId>
            <dependencies>
              <dependency>
                <groupId>org.apache.maven.scm</groupId>
                <artifactId>maven-scm-provider-gitexe</artifactId>
                <version>1.9.5</version>
              </dependency>
            </dependencies>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <modules>
    <module>starter</module>
    <module>starter-test</module>
    <module>data/rest</module>
    <module>data/excel</module>
    <module>odata</module>
    <module>samples</module>
  </modules>
</project>
